src/assets/css/loader.css
body {
	position: relative;
	margin: 0;
	height: 100vh;
	display: grid;
	place-content: center;
}
circle {
	transform-origin: center;
	transform-box: fill-box;
	transform-origin: center;
	animation: rotate linear infinite;
}
circle:nth-child(1) {
	animation-duration: 1.6s;
}
circle:nth-child(2) {
	animation-duration: 1.2s;
}
circle:nth-child(3) {
	animation-duration: 0.8s;
}
@keyframes rotate {
	100% {
		transform: rotate(360deg);
	}
}
.loader-svg {
	width: 100px;
	height: 100px;
	margin-left: auto;
	margin-right: auto;
}

